# WarehouseManageSys

./: CMakeLists.txt  README.md  main.cpp
include/: SqlConnect.h  addgoods.h  exportwarehouse.h  mainwidget.h  removegoods.h  summarydata.h  uploadwarehouse.h
sources/: Dump.sql  resource.qrc
sources/qss/: style.qss
src/: CMakeLists.txt  SqlConnect.cpp  addgoods.cpp  exportwarehouse.cpp  mainwidget.cpp  removegoods.cpp  summarydata.cpp  uploadwarehouse.cpp
ui/: addgoods.ui  exportwarehouse.ui  mainwidget.ui  removegoods.ui  summarydata.ui  uploadwarehouse.ui
